TKMDPA-5363 Fixed bug with cropping cards titles for IE

--- a/_sass/pages/startups-and-developers-v2/media-max-w-797.scss
+++ b/_sass/pages/startups-and-developers-v2/media-max-w-797.scss
@@ -25,6 +25,10 @@
 					margin: 6px 0 0;
 				}
 			}
+
+			.front-title {
+				max-height: 70px;
+			}
 		}
 		.tm-api-docs {
 			header {
